@@ -1,3 +1,4 @@
+- Email: Fixed problem with saving attachments of linked emails.
 - Fixed syncml namespacing bugs
 - Fixed problem with file uploader when no user quota was set.
 - Dropbox: Fixed problem with finding dropbox api files (namespaces)
